jEdit 4.4 version history
       (changes since jEdit 4.3)
:encoding=UTF-8:

{{{ Version 4.4pre1

Thanks to Björn "Vampire" Kautler, Alan Ezust, Eric Berry, Shlomy
Reinstein, Damien Radtke, Dale Anson, Matthieu Casanova, Eric Le Lay,
Bernhard Walle, Joerg Spieler, Kevin Hunter, François Rey, Dion Whitehead
and Marcelo Vanzin for contributing to this release.

{{{ Bug fixes

- Fixed caret going to the wrong position when adding explicit folds
  in a buffer that uses an edit mode that has no line comment
  (Matthieu Casanova #2138160)

- Fixed caret going after the explicit folds when adding explicit folds
  to the wrong position when adding explicit folds while having no
  selection, in any edit mode  (Matthieu Casanova)

- When saving a buffer the autoreload option of the buffer was overridden
  by global settings (Matthieu Casanova #2999966)

- Improve indentation settings of the shellscript edit mode.
  (Björn "Vampire" Kautler #3005463)

- Removed the duplicated "Architecture" line from the Debian control file.
  (Björn "Vampire" Kautler #2999456)

- In the manage panel, when selecting a library, the description panel do
  not contains "null" for every fields and the title is set to the jar name
  instead of "null" (Matthieu Casanova)

- Update of textarea scrollbars and bufferSwitcher are now done in
  EventQueue thread (Matthieu Casanova #2946031)

- Removed unnecessary popup warnings from InstallPanel when loading a
  pluginset. (Alan Ezust)

- fix #1439605 - remove installer.VariableGridLayout (r16596).

- Fixed bug in "selection-length" status bar widget: The widget was not added
  to the edit bus, so it wasn't updated when the edit pane changed.
  (Shlomy Reinstein)

- Removed write capability to the UrlVFS. Now http:// files are marked
  read-only. (Eric Le Lay #2805986)

- When having two monitors the About dialog was appearing between them, one half
  on each monitor. Now it's position is relative to the active View
  (Matthieu Casanova)
